# mvsp

./: .gitignore  CITATION.cff  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
data/Chebyshev_ricker2d_resource_scaling/: RS_ricker2d_chebyshev_[4, 4]_15_ibm_Aer_0_False.json  RS_ricker2d_chebyshev_[4, 4]_15_quantinuum_H2-1E_2_True.json  RS_ricker2d_chebyshev_[4, 4]_1_ibm_Aer_0_False.json  RS_ricker2d_chebyshev_[4, 4]_1_quantinuum_H2-1E_2_True.json  RS_ricker2d_chebyshev_[4, 4]_31_quantinuum_H2-1E_2_True.json  RS_ricker2d_chebyshev_[4, 4]_3_ibm_Aer_0_False.json  RS_ricker2d_chebyshev_[4, 4]_3_quantinuum_H2-1E_2_True.json  RS_ricker2d_chebyshev_[4, 4]_63_quantinuum_H2-1E_2_True.json  RS_ricker2d_chebyshev_[4, 4]_7_ibm_Aer_0_False.json  RS_ricker2d_chebyshev_[4, 4]_7_quantinuum_H2-1E_2_True.json  RS_ricker2d_chebyshev_[5, 5]_15_ibm_Aer_0_False.json  RS_ricker2d_chebyshev_[5, 5]_15_quantinuum_H2-1E_2_True.json  RS_ricker2d_chebyshev_[5, 5]_1_ibm_Aer_0_False.json  RS_ricker2d_chebyshev_[5, 5]_1_quantinuum_H2-1E_2_True.json  RS_ricker2d_chebyshev_[5, 5]_31_quantinuum_H2-1E_2_True.json  RS_ricker2d_chebyshev_[5, 5]_3_ibm_Aer_0_False.json  RS_ricker2d_chebyshev_[5, 5]_3_quantinuum_H2-1E_2_True.json  RS_ricker2d_chebyshev_[5, 5]_63_quantinuum_H2-1E_2_True.json  RS_ricker2d_chebyshev_[5, 5]_7_ibm_Aer_0_False.json  RS_ricker2d_chebyshev_[5, 5]_7_quantinuum_H2-1E_2_True.json  RS_ricker2d_chebyshev_[6, 6]_15_ibm_Aer_0_False.json  RS_ricker2d_chebyshev_[6, 6]_15_quantinuum_H2-1E_2_True.json  RS_ricker2d_chebyshev_[6, 6]_1_ibm_Aer_0_False.json  RS_ricker2d_chebyshev_[6, 6]_1_quantinuum_H2-1E_2_True.json  RS_ricker2d_chebyshev_[6, 6]_31_quantinuum_H2-1E_2_True.json  RS_ricker2d_chebyshev_[6, 6]_3_ibm_Aer_0_False.json  RS_ricker2d_chebyshev_[6, 6]_3_quantinuum_H2-1E_2_True.json  RS_ricker2d_chebyshev_[6, 6]_63_quantinuum_H2-1E_2_True.json  RS_ricker2d_chebyshev_[6, 6]_7_ibm_Aer_0_False.json  RS_ricker2d_chebyshev_[6, 6]_7_quantinuum_H2-1E_2_True.json  (+1 more)
docs/: build_docs.sh
docs/source/: conf.py  (+1 more)
mvsp/: __init__.py
plots/: paper.mplstyle
scripts/: compute_chemistry_data.py  compute_resources.py  hardware_experiment_2d_gaussian.py  hardware_experiment_2d_gaussian_plot.py  kde_cross_validation.py  kde_cross_validation_plot.py  max_errors.py  plot_basis_functions.py  plot_chebyshev_resources.py  plot_chemistry_data.py  plot_fourier_resources.py  run_chebyshev_resources.sh  run_chebyshev_simulations.sh  run_fourier_resources.sh  run_fourier_simulations.sh
(+134 files in other folders)
